--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "phantom",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Phantom",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch",
     "pack": "build --dir",
+    "predist": "npm run build",
     "dist": "build --win --ia32",
     "start": "electron ."
   },
@@ -20,26 +23,37 @@
   },
   "homepage": "https://github.com/evshiron/phantom#readme",
   "dependencies": {
-    "babel-standalone": "^6.18.2",
-    "bluebird": "^3.4.6",
-    "body-parser": "^1.15.2",
-    "bootstrap": "^3.3.7",
     "electron-auto-updater": "^0.6.2",
     "electron-debug": "^1.1.0",
-    "react": "^15.3.2",
-    "react-bootstrap": "^0.30.6",
-    "react-dom": "^15.3.2",
-    "react-tap-event-plugin": "^1.0.0",
     "rpc.io": "git+https://github.com/evshiron/rpc.io.git",
     "socket.io-client": "^1.5.1"
   },
   "devDependencies": {
+    "@types/react": "^15.0.0",
+    "@types/react-dom": "^0.14.20",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "bluebird": "^3.4.6",
     "devtron": "^1.4.0",
     "electron": "^1.4.5",
-    "electron-builder": "^8.3.0"
+    "electron-builder": "^8.3.0",
+    "material-ui": "^0.16.6",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-tap-event-plugin": "^2.0.0",
+    "source-map-loader": "^0.1.6",
+    "typescript": "^2.1.4",
+    "webpack": "^1.14.0"
   },
   "build": {
     "appId": "run.tldr.phantom",
-    "productName": "Phantom"
+    "productName": "Phantom",
+    "files": [
+      "**/*",
+      "!src"
+    ]
   }
 }
