--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phantom",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Phantom",
   "main": "main.js",
   "scripts": {
@@ -23,15 +23,13 @@
   },
   "homepage": "https://github.com/evshiron/phantom#readme",
   "dependencies": {
-    "electron-auto-updater": "^0.6.2",
     "electron-debug": "^1.1.0",
+    "request": "^2.79.0",
     "rpc.io": "git+https://github.com/evshiron/rpc.io.git",
-    "socket.io-client": "^1.5.1"
+    "socket.io-client": "^1.5.1",
+    "tmp": "0.0.31"
   },
   "devDependencies": {
-    "@types/react": "^15.0.0",
-    "@types/react-dom": "^0.14.20",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
@@ -45,7 +43,6 @@
     "react-dom": "^15.3.2",
     "react-tap-event-plugin": "^2.0.0",
     "source-map-loader": "^0.1.6",
-    "typescript": "^2.1.4",
     "webpack": "^1.14.0"
   },
   "build": {
