--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/evshiron/phantom#readme",
   "dependencies": {
+    "bunyan": "^1.8.5",
     "electron-debug": "^1.1.0",
     "request": "^2.79.0",
     "rpc.io": "git+https://github.com/evshiron/rpc.io.git",
