--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/evshiron/phantom#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "bunyan": "^1.8.5",
     "electron-debug": "^1.1.0",
     "request": "^2.79.0",
@@ -35,7 +36,6 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "bluebird": "^3.4.6",
     "devtron": "^1.4.0",
     "electron": "^1.4.5",
     "electron-builder": "^8.3.0",
@@ -52,6 +52,7 @@
     "files": [
       "**/*",
       "!src"
-    ]
+    ],
+    "asar": false
   }
 }
