--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "devtron": "^1.4.0",
     "electron": "^1.4.5",
     "electron-builder": "^8.3.0",
+    "file-loader": "^0.10.0",
     "material-ui": "^0.16.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-tap-event-plugin": "^2.0.0",
     "source-map-loader": "^0.1.6",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0"
   },
   "build": {
