--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phantom",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Phantom",
   "main": "main.js",
   "scripts": {
@@ -40,7 +40,7 @@
     "babel-preset-react": "^6.16.0",
     "devtron": "^1.4.0",
     "electron": "^1.4.5",
-    "electron-builder": "^8.3.0",
+    "electron-builder": "^13.5.0",
     "file-loader": "^0.10.0",
     "material-ui": "^0.16.6",
     "react": "^15.3.2",
@@ -57,6 +57,9 @@
       "**/*",
       "!src"
     ],
-    "asar": false
+    "asar": true,
+    "nsis": {
+      "unicode": false
+    }
   }
 }
