--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/evshiron/phantom.git"
+    "url": "git+https://github.com/ManaSource/phantom.git"
   },
   "author": "evshiron",
   "license": "AGPL-3.0",
   "bugs": {
-    "url": "https://github.com/evshiron/phantom/issues"
+    "url": "https://github.com/ManaSource/phantom/issues"
   },
-  "homepage": "https://github.com/evshiron/phantom#readme",
+  "homepage": "https://github.com/ManaSource/phantom#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
     "bunyan": "^1.8.5",
     "electron-debug": "^1.1.0",
     "moment": "^2.17.1",
-    "phantom-toolbox": "github:evshiron/phantom-toolbox",
+    "phantom-toolbox": "github:ManaSource/phantom-toolbox",
     "request": "^2.79.0",
     "rpc.io": "git+https://github.com/evshiron/rpc.io.git",
     "socket.io-client": "^1.5.1",
